--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -43,7 +43,7 @@ nav li {
 }
 
 body{
-    background-image:linear-gradient(rgba(0,0,0,0.2), #000000), url(images/1.png);
+    background-image:linear-gradient(rgba(0,0,0,0.2), #000000), url('../../images/contact.png');
     background-size: cover;
     background-position: center;
 }
