--- a/static/css/about.css
+++ b/static/css/about.css
@@ -62,7 +62,7 @@ body section {
     margin-left: 10rem;
 }
 
-body section h1 {
+/* body section h1 {
     font-family: Chunk Five;
     font-size: 54.3px;
     color: #763c00;
@@ -72,10 +72,17 @@ body section li {
     font-family: Kollektif;
     font-size: 19px;
     color: #763c00;
-}
+} */
 
 #searchbar {
-    background-color: #c43c13;
+    /* background-color: #c43c13;
+    border: none;
+    border-radius: 4px;
+    padding: 8px;
+    width: 20rem;
+    font-size: 18px;
+    color: white; */
+    background-color: #763c00;
     border: none;
     border-radius: 4px;
     padding: 8px;
@@ -88,9 +95,9 @@ body section li {
     color: white;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    background-color: #1a1a1a;
-    overflow: hidden;
-  }
+section {
+    padding-top: 10%;
+    color: #5f350b;
+    font-size: 25px;
+    font-family: "Open Sans", sans-serif;
+}
