--- a/static/css/destinations.css
+++ b/static/css/destinations.css
@@ -11,22 +11,35 @@
     src: url('../fonts/HKGrotesk-Light.otf');
 }
 
+header nav {
+    fill-opacity: inherit;
+    background-color: #e1b5a8;
+}
+
+nav {
+    /* flex: 0 1 auto;
+    display: flex;
+    margin-top: 3rem; */
+    padding: 20px;
+}
+
+body {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+} 
+
+#content #left-section {
+    float: left;
+}
+#content #right-section {
+    float: right;
+}
+
 html,
 body {
   height: 100%;
   margin: 0;
-}
-
-body {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-}
-
-nav {
-    flex: 0 1 auto;
-    display: flex;
-    margin-top: 3rem;
 }
 
 nav span {
@@ -34,7 +47,7 @@ nav span {
     font-family: HK-Grotesk Medium;
     font-size: 18px;
     font-style: italic;
-    color: whitesmoke;
+    color: black;
 }
 
 nav li {
@@ -45,7 +58,7 @@ nav li {
     display: flex;
     margin: 0rem 10rem 0rem 15rem;
     flex-grow: 2;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 #nav-links li a {
@@ -60,7 +73,9 @@ nav li {
 }
 
 #left-section {
-    margin-top: 5rem;
+   margin-top: 7rem;
+   margin-left: 5rem;
+    /* padding-top: 100px */
 }
 
 #left-section h1 {
@@ -89,10 +104,12 @@ nav li {
     flex-flow: column;
     justify-content: space-evenly;
     align-content: flex-start;
+    padding-top: 100px;
 }
 
 .li-item {
     display: flex;
+    padding-bottom: 50px;
 }
 
 .li-item .description {
@@ -110,7 +127,20 @@ nav li {
     font-size: 13px;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
 body img {
     width: 250px;
 }
+
 
